# scopecorp

./: .clocignore  .gitignore  CMakeLists.txt  README.md  build.bat  cl.bat  cmake.bat  run_tree_build.bat  run_tree_cmake.bat  todo.txt
run_tree/: slang.lib
run_tree/data/flip_books/: player_move_back.fb  player_move_back.flip_book  player_move_forward.fb  player_move_forward.flip_book  player_move_left.fb  player_move_left.flip_book  player_move_right.fb  player_move_right.flip_book
run_tree/data/levels/: main.wl
run_tree/data/materials/: cube.mat  cube.material  frame_buffer.mat  frame_buffer.material  geometry.mat  geometry.material  ground.mat  ground.material  outline.mat  outline.material  player.mat  player.material  skybox.mat  skybox.material  ui_element.mat  ui_element.material  ui_text.mat  ui_text.material
run_tree/data/meshes/: cube.mesh  player.mesh  quad.mesh  skybox.mesh
run_tree/data/shaders/: camera.glsl.h  camera.slh  color.glsl.h  color.slh  debug_geometry.glsl  entity.glsl  entity.sl  frame_buffer.glsl  frame_buffer.sl  framebuffer.glsl  geometry.glsl  geometry.sl  globals.slh  light.glsl.h  light.slh  outline.glsl  outline.sl  player.glsl  pos_col.glsl  pos_tex.glsl  pos_tex_scale.glsl  quad.glsl  skybox.glsl  skybox.sl  text.glsl  ui_element.glsl  ui_element.sl  ui_text.glsl  ui_text.sl  uniform_blocks.glsl.h  viewport.glsl.h  viewport.slh
src/: CMakeLists.txt  archive.h  array.h  assertion.cpp  assertion.h  asset.cpp  asset.h  asset_registry.h  basic.cpp  c_array.h  camera.cpp  camera.h  catalog.h  collision.cpp  collision.h  controls.h  file.cpp  file.h  flip_book.cpp  flip_book.h  font.cpp  font.h  hash.h  hash_table.h  input_stack.h  large.cpp  large.h  log.cpp  log.h  main.cpp  matrix.cpp  memory.h  memory_eater.h  memory_storage.cpp  memory_storage.h  my_math.cpp  pak.h  pch.cpp  pch.h  pool.h  (+25 more)
src/audio/: al.cpp  au_sound.h  au_table.h  audio.cpp  audio.h  audio_player.h  audio_registry.h  sound.cpp  sound.h  wav.h
src/editor/: asset_registry.cpp  asset_registry.h  console.h  debug_console.h  editor.cpp  editor.h  hot_reload.cpp  hot_reload.h  telemetry.h
src/fonts/: better_vcr_16.h  better_vcr_24.h
src/game/: entities.h  entity.h  entity_manager.h  game.cpp  game.h  game_pak.h  level.h  player_control.cpp  player_control.h  world.cpp  world.h
src/math/: math.cpp  math.h  math_basic.h  math_core.h  matrix.cpp  matrix.h  quat.cpp  quat.h  quaternion.h  vector.cpp  vector.h
src/os/: atomic.h  cpu_time.h  file.cpp  file.h  file_system.h  input.h  memory.h  os.cpp  sync.h  system.h  thread.h  time.h  wgl.h  win32.cpp  win32.h  win32_gl.cpp  win32_hot_reload.cpp  win32_input.cpp  win32_memory.cpp  win32_thread.cpp  win32_time.cpp  win32_window.cpp  win32_window.h  window.h
src/render/: buffer_storage.h  command_buffer.h  command_list.h  debug_draw.cpp  debug_draw.h  debug_geometry.h  draw.cpp  draw.h  flip_book.h  frame_buffer.h  geometry.h  geometry_draw.h  gfx.h  gl.cpp  gl.h  glad.cpp  glad.h  gpu.h  index_buffer.cpp  index_buffer.h  indirect_buffer.h  line_geometry.h  material.h  mesh.h  r_command.h  r_flip_book.h  r_geo.h  r_light.h  r_material.h  r_mesh.h  r_pass.h  r_shader.h  r_stats.h  r_storage.h  r_table.h  r_target.h  r_texture.h  r_uniform.h  r_vertex.h  r_vertex_descriptor.h  (+35 more)
src/tools/: asset_baker.cpp  font_baker.cpp  preprocessor.cpp
src/tracy/client/: tracy_rpmalloc.cpp
